--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(Get_timeseries1)
 export(Print_Locations)
 export(TS_simplify)
+export(calc_flood_depths2)
+export(calc_recent_local_slr2)
 export(calc_tidal_datums1)
 export(calc_tidal_datums2)
 export(load_raw_wl)
@@ -10,4 +12,7 @@ exportClasses(timeseriesClient)
 import(dplyr)
 import(httr)
 import(jsonlite)
+import(lubridate)
+import(purrr)
 import(tidyr)
+import(zoo)
