--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
     R (>= 3.5)
+    keyring
 LazyData: true
+Remotes: 
+    github::nationalparkservice/imd-fetchaquarius
