📝✅ Created function documentation and tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,21 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Depends: 
     R (>= 3.5)
+Imports: 
+    dplyr,
+    tidyr,
+    ggplot2,
+    purrr,
+    fetchaquarius,
+    lubridate,
+    here,
+    zoo
 LazyData: true
 Remotes: 
     github::nationalparkservice/imd-fetchaquarius
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
