--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ import(dplyr)
 import(fetchaquarius)
 import(lubridate)
 import(purrr)
+import(stringr)
 import(tidyr)
 importFrom(lubridate,as_date)
 importFrom(zoo,rollapply)
