📝Updated package documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,12 @@ export(daily_mean_flood)
 export(find_extremes)
 export(flood_depths)
 export(flood_events)
+export(get_parameters)
+export(get_sites)
 export(get_wl_data)
 export(longest_flood)
+export(plot_water_level_with_datums)
+export(save_water_level_with_datums)
 export(tidal_datums)
 export(time_flooded)
 import(dplyr)
@@ -16,4 +20,7 @@ import(purrr)
 import(stringr)
 import(tidyr)
 importFrom(lubridate,as_date)
+importFrom(lubridate,day)
+importFrom(lubridate,month)
+importFrom(lubridate,year)
 importFrom(zoo,rollapply)
